# fraud-detection

./: .gitignore  main.py  pyproject.toml  template.py
notebooks/: trials.ipynb
src/frauddetection/: __init__.py  exception.py
src/frauddetection/utils/: common.py
