[project]
name = "frauddetection"
version = "0.1.0"
description = ""
authors = [
    {name = "desire SOUSSOU",email = "soussoudesire2019@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "notebook (>=7.3.3,<8.0.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "box (>=0.1.5,<0.2.0)",
    "ensure (>=1.0.4,<2.0.0)",
    "python-box (>=7.3.2,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
